--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,27 @@
     "short_name": "PG",
     "icons": [
         {
-            "src": "assets/images/icons/icon-72x72.png",
-            "sizes": "72x72",
+            "src": "public/assets/images/icons/favicon_io/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "public/assets/images/icons/favicon_io/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "public/assets/images/icons/favicon_io/apple-touch-icon.png",
+            "type": "image/png"
+        },
+        {
+            "src": "public/assets/images/icons/favicon_io/favicon-16x16.png",
+            "sizes": "16x16",
+            "type": "image/png"
+        },
+        {
+            "src": "public/assets/images/icons/favicon_io/favicon-32x32.png",
+            "sizes": "32x32",
             "type": "image/png"
         }
         
